<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/hinh_nen_rong"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textColor="#E8316F"
        android:text="@string/strTxtChaoMung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:backgroundTint="#1781D5"
        android:id="@+id/btnHocTV"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="168dp"
        android:text="@string/strbtnHocTuVung"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:backgroundTint="#1781D5"
        android:id="@+id/btnHocNguPhap"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginStart="91dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="340dp"
        android:text="@string/strbtnHocNguPhap"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textIntroduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="548dp"
        android:text="@string/txtIntro"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>