<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#93DEE8"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageHinhTV"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/hinhtuvung" />

    <TextView
        android:textColor="#ff0000"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_toRightOf="@+id/imageHinhTV"
        android:id="@+id/textviewTenTV"
        android:text="@string/textTenTV"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageHinhTV" />

<!--    <ImageView-->
<!--        android:id="@+id/imageAmthanh"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="180dp"-->
<!--        android:layout_marginLeft="180dp"-->
<!--        android:layout_marginTop="14dp"-->
<!--        android:layout_toEndOf="@+id/imageHinhTV"-->
<!--        android:layout_toRightOf="@+id/imageHinhTV"-->
<!--        android:contentDescription="@string/Motaamthanhtu"-->
<!--        android:src="@drawable/volume_color" />-->

    <TextView
        android:textSize="18sp"
        android:text="@string/nghiacuatu"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewNghiaTV"
        android:layout_toRightOf="@+id/imageHinhTV"
        android:layout_toEndOf="@+id/imageHinhTV" />

</RelativeLayout>